--- a/styles/agility-pageModules/_newsList.scss
+++ b/styles/agility-pageModules/_newsList.scss
@@ -5,11 +5,15 @@
     text-align: center;
   }
   &__articles {
-    display: grid;
-    gap: 2rem;
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     &__article {
+      width: 90vw;
+      min-width: unset;
+      max-width: 25rem;
       > * {
         max-width: calc(33% - 1.875rem);
       }
@@ -46,20 +50,16 @@
         }
       }
     }
-    @include touch() {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      .newsArticle {
-        width: calc(33% - 1.875rem);
-        min-width: 21.25rem;
-      }
-    }
-    @include mobile() {
-      .newsArticle {
-        width: 90vw;
-        min-width: unset;
+    @include desktop() {
+      display: grid;
+      gap: 2rem;
+      width: 100%;
+      grid-template-columns: repeat(3, 1fr);
+      &__article {
+        width: initial;
+        > * {
+          max-width: calc(33% - 1.875rem);
+        }
       }
     }
   }
