--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -213,6 +213,10 @@ blog posts or anywhere where html is rendered */
   padding: 2rem 0;
   margin: 3rem 0 1rem 0;
   text-align: center;
+  @include desktop() {
+    padding: 2rem 0;
+    margin: 3rem 0 1rem 0;
+  }
 }
 
 table {
