--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -10,9 +10,12 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  @include touch() {
+  .image {
+    max-height: 22.5rem;
+  }
+  @include desktop() {
     .image {
-      max-height: 22.5rem;
+      max-height: initial;
     }
   }
 
