--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -180,18 +180,27 @@
     display: flex;
     flex-flow: column;
 
+    &:not(:last-child) {
+      &::after {
+        content: "";
+        width: 100%;
+        height: 0.1rem;
+        background: transparentize($color-skyblue, 0.85);
+        margin-top: 1rem;
+      }
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
     @include desktop() {
       padding-right: 0.5rem;
       margin-bottom: 2rem;
-    }
-    @include touch() {
+
       &:not(:last-child) {
         &::after {
-          content: "";
-          width: 100%;
-          height: 0.1rem;
-          background: transparentize($color-skyblue, 0.85);
-          margin-top: 1rem;
+          display: none;
         }
       }
 
