add style options for ol tags inside generic .content class

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -157,8 +157,17 @@ blog posts or anywhere where html is rendered */
   }
 
   ol {
+    &.romans {
+      list-style-type: lower-roman;
+    }
+    &.alphabets {
+      list-style-type: lower-alpha;
+    }
     li {
       margin-top: 1.5rem;
+      &::marker {
+        font-weight: 600;
+      }
     }
   }
   ul {
