--- a/components/agility-pageModules/contentList/contentList.module.scss
+++ b/components/agility-pageModules/contentList/contentList.module.scss
@@ -11,6 +11,7 @@
     gap: 2rem;
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
+    align-items: stretch;
     .contentItem {
       > * {
         max-width: calc(33% - 1.875rem);
