--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -11,7 +11,7 @@ $color-gray: #999999;
 $color-darkgray: #777;
 $color-darkmedium: #bbb;
 $color-mediumgray: #e5e5e5;
-$color-lightgray: #eeeeee;
+$color-lightgray: #f6f6f6;
 $color-red: #ff0000; // Use for Error messages and Error selectors
 $color-green: #427f11; // Use for valid messages and success icon
 $color-purple: #5a0bdc;
