--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -3,13 +3,15 @@
 
 .blogCard {
   height: 22.5vh;
-  min-height: 18.75rem;
+  min-height: 21rem;
   border-radius: 1rem;
   box-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
   background-color: $color-white;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  padding-bottom: 1rem;
+  
   .image {
     max-height: 22.5rem;
   }
@@ -65,7 +67,7 @@
     }
 
     .title {
-      font-size: 1.125rem;
+      font-size: 1rem;
       line-height: 1.2;
       padding: 1rem 1.5rem 0 1.5rem;
       overflow: hidden;
