--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -12,8 +12,12 @@
     width: 100%;
     height: 100%;
     & > div {
+
+
       &:only-child {
-        display: block !important;
+        height: 100%;
+
+        display: block;
         img {
           object-fit: fill;
           height: unset;
@@ -138,6 +142,8 @@
         .client {
           font-size: 1.5rem;
           line-height: 1.2;
+          font-weight: 400;
+
           .jobTitle {
             font-style: italic;
           }
