--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -2,9 +2,10 @@
 @import "../../../styles/settings/colors";
 
 .logosList {
-  padding: 2rem 0;
+  padding: 4rem 0;
   .heading {
     text-align: center;
+    margin-bottom: 2rem;
   }
   .content {
     display: flex;
@@ -33,6 +34,7 @@
     align-items: center;
     justify-content: center;
     min-height: 6.25rem;
+    padding: 1.25rem;
     & > div {
       &:only-child {
         height: 100%;
