--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -13,6 +13,7 @@
     height: 100%;
     & > div {
       &:only-child {
+        height: 100%;
         display: block !important;
         img {
           object-fit: fill;
