add styles to content blackbar from cookie script

--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -257,3 +257,12 @@
     margin-left: 2rem;
   }
 }
+
+.consentBlackbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999999999;
+  @include shadow();
+}
