--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -5,7 +5,6 @@
 // default firstFold styling
 .firstFold {
   position: relative;
-  overflow: clip;
   // default firstFold layout
   .defaultLayout {
     display: flex;
@@ -18,8 +17,17 @@
     @include desktop() {
       flex-direction: row;
     }
-    &.defaultLayoutFixedHeight {
+    &.defaultLayoutFixedHeight400 {
       max-height: 25rem;
+    }
+    &.defaultLayoutFixedHeight500 {
+      max-height: 31.25rem;
+    }
+    &.defaultLayoutFixedHeight600 {
+      max-height: 37.5rem;
+    }
+    &.defaultLayoutFixedHeight700 {
+      max-height: 43.75em;
     }
   }
   // styling configuration for the optionally toggled no image layout field
@@ -45,6 +53,7 @@
     text-align: center;
     position: relative;
     z-index: 1;
+    overflow: clip;
   }
   .text {
     margin-bottom: 1rem;
@@ -57,6 +66,7 @@
     position: relative;
     max-height: inherit;
     margin-top: 1rem;
+    overflow: clip;
     @include desktop() {
       margin-top: initial;
     }
@@ -65,6 +75,9 @@
       height: 100%;
       position: unset !important;
       img {
+        height: unset !important;
+        min-height: unset !important;
+        margin: auto 0 0 0 !important;
         object-fit: contain;
       }
     }
@@ -82,12 +95,14 @@
 
   .primaryLink {
     margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 0.5em 2em;
     border-radius: 3em;
     border-width: 0.15em;
   }
   .secondaryLink {
     margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 0.5em 2em;
     border-radius: 3em;
     border-width: 0.15em;
@@ -338,10 +353,9 @@
   justify-content: unset;
   .logoGridColumn {
     padding: 1.75rem;
-    @include desktop(){
-      padding: .5rem;
-      margin-right: .5rem;
+    @include desktop() {
+      padding: 0.5rem;
+      margin-right: 0.5rem;
     }
-
   }
 }
