--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -463,6 +463,12 @@
 .pb-0 {
   padding-bottom: 0 !important;
 }
+.pb-1 {
+  padding-bottom: $size-1 !important;
+}
+.pb-2 {
+  padding-bottom: $size-2 !important;
+}
 .pb-3 {
   padding-bottom: $size-3 !important;
 }
