--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -139,7 +139,7 @@ blog posts or anywhere where html is rendered */
   h4,
   h5,
   h6 {
-    margin: 2rem 0;
+    margin: 0 0 2rem 0;
   }
 
   p {
