updated global h tag and p tag margins

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -139,11 +139,11 @@ blog posts or anywhere where html is rendered */
   h4,
   h5,
   h6 {
-    margin: 0 0 2rem 0;
+    margin: 0 0 0.7rem 0;
   }
 
   p {
-    margin-top: 1rem;
+    margin-bottom: 1.2rem;
   }
 
   a {
