--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -11,22 +11,28 @@
     }
     .textContent {
       padding: 0 1rem;
-      .testimonial {
-        .testimonialRating {
-          display: flex;
-          margin: 1.5rem 0 1rem 0;
-          img {
-            margin: 0 0.25rem;
+      .testimonials {
+        margin-top: 2rem;
+
+        .testimonial {
+          .testimonialRating {
+            display: flex;
+            margin: 1.5rem 0 1rem 0;
+            img {
+              margin: 0 0.25rem;
+            }
+          }
+          p {
+            margin-top: 1rem;
+            font-size: 1rem;
+            white-space: pre-line;
+          }
+          small {
+            font-size: 0.85rem;
           }
         }
-        p {
-          font-size: 1rem;
-          white-space: pre-line;
-        }
-        small {
-          font-size: 0.85rem;
-        }
       }
+
       .awardImages {
         margin-top: 1.5rem;
         .awardImage {
