--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -37,7 +37,13 @@ h6 {
 }
 
 h1,
-.heading-1 {
+.heading-1,
+.heading-1 h1,
+.heading-1 h2,
+.heading-1 h3,
+.heading-1 h4,
+.heading-1 h5,
+.heading-1 h6 {
   font-size: 3rem;
   @include desktop() {
     font-size: 4rem;
@@ -45,21 +51,39 @@ h1,
 }
 
 h2,
-.heading-2 {
+.heading-2,
+.heading-2 h1,
+.heading-2 h2,
+.heading-2 h3,
+.heading-2 h4,
+.heading-2 h5,
+.heading-2 h6 {
   font-size: 2.5rem;
   @include desktop() {
     font-size: 3.5rem;
   }
 }
 h3,
-.heading-3 {
+.heading-3,
+.heading-3 h1,
+.heading-3 h2,
+.heading-3 h3,
+.heading-3 h4,
+.heading-3 h5,
+.heading-3 h6 {
   font-size: 2rem;
   @include desktop() {
     font-size: 3rem;
   }
 }
 h4,
-.heading-4 {
+.heading-4,
+.heading-4 h1,
+.heading-4 h2,
+.heading-4 h3,
+.heading-4 h4,
+.heading-4 h5,
+.heading-4 h6 {
   font-size: 1.5rem;
   @include desktop() {
     font-size: 2.5rem;
@@ -67,7 +91,13 @@ h4,
 }
 
 h5,
-.heading-5 {
+.heading-5,
+.heading-5 h1,
+.heading-5 h2,
+.heading-5 h3,
+.heading-5 h4,
+.heading-5 h5,
+.heading-5 h6 {
   font-size: 1.5rem;
   @include desktop() {
     font-size: 2rem;
@@ -75,7 +105,13 @@ h5,
 }
 
 h6,
-.heading-6 {
+.heading-6,
+.heading-6 h1,
+.heading-6 h2,
+.heading-6 h3,
+.heading-6 h4,
+.heading-6 h5,
+.heading-6 h6 {
   font-size: 1.5rem;
   @include desktop() {
     font-size: 1.5rem;
