--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -184,6 +184,10 @@ blog posts or anywhere where html is rendered */
 
   p {
     margin-bottom: 1.2rem;
+    &:last-child {
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
   }
 
   a {
