removed last child p tag margin from text grid with media module

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -29,6 +29,9 @@
       gap: 2rem;
       p {
         padding-bottom: 1rem;
+        &:last-child {
+          padding-bottom: 0;
+        }
       }
       a {
         font-weight: 600;
