updated vertical alignment for Logo List module

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -82,6 +82,11 @@
       }
     }
   }
+  .noImageLayout {
+    .links {
+      margin-top: toRem(20);
+    }
+  }
 
   .links {
     flex-direction: column;
