--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -17,6 +17,7 @@
       .columnsLayout {
         display: flex;
         gap: 1.5rem;
+        align-items: center;
         .list {
           flex-basis: 45%;
         }
