--- a/components/agility-pageModules/resourceList/resourceList.module.scss
+++ b/components/agility-pageModules/resourceList/resourceList.module.scss
@@ -26,6 +26,7 @@
       gap: 2rem;
       width: 100%;
       grid-template-columns: repeat(3, 1fr);
+      align-items: stretch;
       .resource {
         width: initial;
         > * {
