layout/styling adjustments: changes based on qa

--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -164,6 +164,9 @@
           position: unset !important;
           height: unset !important;
           width: unset !important;
+          &:only-child {
+            height: 0 !important;
+          }
         }
       }
     }
