--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -17,18 +17,6 @@
     @include desktop() {
       flex-direction: row;
     }
-    &.defaultLayoutFixedHeight400 {
-      max-height: 25rem;
-    }
-    &.defaultLayoutFixedHeight500 {
-      max-height: 31.25rem;
-    }
-    &.defaultLayoutFixedHeight600 {
-      max-height: 37.5rem;
-    }
-    &.defaultLayoutFixedHeight700 {
-      max-height: 43.75em;
-    }
   }
   // styling configuration for the optionally toggled no image layout field
   .noImageLayout {
@@ -54,6 +42,21 @@
     position: relative;
     z-index: 1;
     overflow: clip;
+    &.textContentBasis30 {
+      flex-basis: 30%;
+    }
+    &.textContentBasis40 {
+      flex-basis: 40%;
+    }
+    &.textContentBasis50 {
+      flex-basis: 50%;
+    }
+    &.textContentBasis60 {
+      flex-basis: 60%;
+    }
+    &.textContentBasis70 {
+      flex-basis: 70%;
+    }
   }
   .text {
     margin-top: 1rem;
@@ -79,6 +82,39 @@
         min-height: unset !important;
         margin: auto 0 0 0 !important;
         object-fit: contain;
+      }
+    }
+  }
+  .image,
+  .imageLink {
+    flex-grow: 1;
+    &.mediaBasis30 {
+      flex-basis: 30%;
+    }
+    &.mediaBasis40 {
+      flex-basis: 40%;
+    }
+    &.mediaBasis50 {
+      flex-basis: 50%;
+    }
+    &.mediaBasis60 {
+      flex-basis: 60%;
+    }
+    &.mediaBasis70 {
+      flex-basis: 70%;
+    }
+    @include desktop() {
+      &.defaultLayoutFixedHeight400 {
+        max-height: 25rem;
+      }
+      &.defaultLayoutFixedHeight500 {
+        max-height: 31.25rem;
+      }
+      &.defaultLayoutFixedHeight600 {
+        max-height: 37.5rem;
+      }
+      &.defaultLayoutFixedHeight700 {
+        max-height: 43.75em;
       }
     }
   }
