updated global message styles

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -36,6 +36,10 @@
   &.white {
     background-color: white;
     color: $color-navy;
+    &:hover {
+      color: white;
+      background-color: $color-paleblue;
+    }
   }
 
   // Main navigation link cta
