--- a/components/layout/globalMessage/globalMessage.module.scss
+++ b/components/layout/globalMessage/globalMessage.module.scss
@@ -59,7 +59,11 @@
   color: $color-white;
   width: 90%;
   text-align: left;
-  font-size: toRem(16);
+  &.content {
+    p {
+      font-size: toRem(16);
+    }
+  }
   @include desktop() {
     text-align: center;
   }
