--- a/components/layout/navbar/search.module.scss
+++ b/components/layout/navbar/search.module.scss
@@ -5,7 +5,7 @@
 
 .searchContainer {
   position: absolute;
-  top: .15rem;
+  top: 0.15rem;
   left: 0;
   width: 100%;
   @include desktop() {
@@ -153,6 +153,12 @@
         padding: 0.75rem;
         max-height: 80vh;
         overflow-y: scroll;
+
+        &.autocompleteClosed {
+          position: absolute;
+          left: -2147483647px;
+        }
+
         .autocompleteSource {
           margin-bottom: 1rem;
           .autocompleteSourceTitle {
@@ -188,6 +194,9 @@
         }
         @include desktop() {
           width: 30rem;
+          //       position: absolute;
+          //       left: 20rem;
+          // top: 3.75rem;
         }
       }
     }
