--- a/styles/agility-pageModules/_newsList.scss
+++ b/styles/agility-pageModules/_newsList.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    align-items: stretch;
     &__article {
       width: 90vw;
       min-width: unset;
