--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -138,6 +138,8 @@
     align-items: center;
     justify-content: center;
     flex-grow: 1;
+
+    // Vertical align conf
     &.mediaBasis30 {
       flex-basis: 30%;
     }
@@ -153,6 +155,19 @@
     &.mediaBasis70 {
       flex-basis: 70%;
     }
+
+    @include desktop() {
+      &.p1 {
+        padding: 1rem;
+      }
+      &.p2 {
+        padding: 2rem;
+      }
+      &.p3 {
+        padding: 4rem;
+      }
+    }
+
     div {
       &:only-child {
         width: 100%;
