--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -2,18 +2,19 @@
 @import "../../../styles/settings/mixins";
 
 .blogCard {
-  height: 22.5vh;
-  min-height: 21rem;
+  // height: 22.5vh;
+  // min-height: 21rem;
   border-radius: 1rem;
   box-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
   background-color: $color-white;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  // justify-content: flex-end;
   padding-bottom: 1rem;
-  
+  height: 100%;
+
   .image {
-    max-height: 22.5rem;
+    min-height: 8rem;
   }
   @include desktop() {
     .image {
@@ -23,9 +24,10 @@
 
   .image {
     background: $color-gray;
-    min-height: 50%;
-    max-height: 50%;
-    height: 50%;
+    // min-height: 50%;
+    // max-height: 50%;
+    // height: 50%;
+    height: 6rem;
     overflow: hidden;
     object-fit: fill;
     border-top-left-radius: 1rem;
@@ -49,8 +51,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 50%;
-    max-height: 50%;
+    // min-height: 50%;
+    // max-height: 50%;
 
     .date {
       text-transform: uppercase;
@@ -69,11 +71,11 @@
     .title {
       font-size: 1rem;
       line-height: 1.2;
-      padding: 1rem 1.5rem 0 1.5rem;
+      padding: 1rem 1.5rem 1rem 1.5rem;
       overflow: hidden;
-      display: -webkit-box;
-      -webkit-line-clamp: 4;
-      -webkit-box-orient: vertical;
+      // display: -webkit-box;
+      // -webkit-line-clamp: 4;
+      // -webkit-box-orient: vertical;
       width: 100%;
     }
 
