--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/settings/colors";
 @import "../../../styles/settings/mixins";
 
+.heading {}
+
 .columns {
   display: grid;
   grid-template-columns: 100%;
