updated event heading

--- a/components/agility-pageModules/eventsPageContent/eventsPageContent.module.scss
+++ b/components/agility-pageModules/eventsPageContent/eventsPageContent.module.scss
@@ -1,6 +1,12 @@
 @import "../../../styles/settings/mixins";
 @import "../../../styles/settings/colors";
 
+.heading {
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
 .eventsPageContent {
   display: grid;
   grid-auto-flow: row;
