--- a/components/agility-pageModules/testimonialList/testimonialList.module.scss
+++ b/components/agility-pageModules/testimonialList/testimonialList.module.scss
@@ -24,74 +24,19 @@
             border: 0.25rem solid $color-white;
           }
         }
-        @include desktop() {
+      }
+      @include desktop() {
+        max-height: 27.5rem;
+        .media {
           max-width: unset;
-        }
-      }
-    }
-
-    .staticImageLayoutTextContent {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        margin: 1rem 0 1.5rem 0;
-      }
-      p {
-        font-size: 1rem;
-      }
-      small {
-        margin-top: 1rem;
-        font-size: 1rem;
-        font-style: italic;
-      }
-    }
-
-    .staticImageLayoutControls {
-      margin: 1rem auto 0 auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      max-width: 7.8125rem;
-      .dots {
-        display: flex;
-        align-items: center;
-        margin-bottom: 2rem;
-        button {
-          width: 0.75rem;
-          height: 0.75rem;
-          margin: 0 0.25rem;
-          border: solid 0.185rem $color-navy;
-          border-radius: 50%;
-          &.activeDot {
-            background-color: $color-navy;
+          top: -6rem;
+          min-width: unset;
+          border: 0.65rem solid $color-skyblue;
+          div {
+            &:only-child {
+              border: 0.65rem solid $color-white;
+            }
           }
-        }
-      }
-      .button {
-        position: relative;
-        padding: 1rem;
-        background-color: $color-darkmedium;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &::after {
-          content: "";
-          position: absolute;
-          display: block;
-          padding: 0.35rem;
-          border-top: 0.2rem solid $color-white;
-          border-right: 0.2rem solid $color-white;
-          transform: translateX(-0.15rem) rotate(45deg);
         }
       }
     }
@@ -152,22 +97,7 @@
         }
       }
     }
-  }
-
-  @include desktop() {
-    .mediaWrapper {
-      .media {
-        top: -6rem;
-        min-width: unset;
-        border: 0.65rem solid $color-skyblue;
-        div {
-          &:only-child {
-            border: 0.65rem solid $color-white;
-          }
-        }
-      }
-    }
-    .content {
+    @include desktop() {
       flex-direction: row;
       & > * {
         flex-basis: 100%;
@@ -186,8 +116,7 @@
         }
       }
 
-      .textContent,
-      .staticImageLayoutTextContent {
+      .textContent {
         margin: 3rem 0 auto 2rem;
         align-items: flex-start;
         text-align: left;
@@ -197,19 +126,110 @@
           }
         }
       }
-      .staticImageLayoutTextContent {
-        min-height: 25rem;
-        max-height: 25rem;
-      }
+
       .controls {
         margin: 3rem 0 auto 2rem;
       }
+    }
+  }
+
+  .staticImageLayoutContent {
+    display: grid;
+    grid-template-columns: 1fr;
+    & > div {
+      &:first-of-type {
+        img {
+          object-fit: contain;
+        }
+      }
+    }
+    .staticImageLayoutTextContent {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin-top: 2rem;
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 1rem 0 1.5rem 0;
+      }
+      p {
+        font-size: 1rem;
+      }
+      small {
+        margin-top: 1rem;
+        font-size: 1rem;
+        font-style: italic;
+      }
+    }
+    .staticImageLayoutControls {
+      margin: 1rem auto 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      max-width: 7.8125rem;
+      .dots {
+        display: flex;
+        align-items: center;
+        margin-bottom: 2rem;
+        list-style-type: none;
+        padding: unset;
+        button {
+          width: 0.75rem;
+          height: 0.75rem;
+          margin: 0 0.25rem;
+          border: solid 0.185rem $color-navy;
+          border-radius: 50%;
+          &.activeDot {
+            background-color: $color-navy;
+          }
+        }
+      }
+      .button {
+        position: relative;
+        padding: 1rem;
+        background-color: $color-darkmedium;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &::after {
+          content: "";
+          position: absolute;
+          display: block;
+          padding: 0.35rem;
+          border-top: 0.2rem solid $color-white;
+          border-right: 0.2rem solid $color-white;
+          transform: translateX(-0.15rem) rotate(45deg);
+        }
+      }
+    }
+    @include desktop() {
+      gap: 4rem;
+      grid-template-columns: repeat(2, 1fr);
+      .staticImageLayoutTextContent {
+        align-items: flex-start;
+        text-align: left;
+        min-height: 23rem;
+        max-height: 23rem;
+        p {
+          &:first-child {
+            padding-top: unset;
+          }
+        }
+      }
       .staticImageLayoutControls {
-        margin: 3rem 0 auto 2rem;
+        margin: 0 0 auto 0;
         align-items: flex-start;
       }
     }
   }
+
   #testimonialGrid {
     display: grid;
     grid-gap: 3.5rem;
@@ -223,7 +243,8 @@
       border-radius: 1rem;
       background-color: white;
       box-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
-      .gridItemLogoPlaceholder, .gridItemLogoContainer {
+      .gridItemLogoPlaceholder,
+      .gridItemLogoContainer {
         height: 7rem;
         width: 100%;
       }
@@ -236,18 +257,82 @@
       .gridItemText {
         text-align: center;
         line-height: 140%;
-        margin-top: .25rem;
+        margin-top: 0.25rem;
       }
       .gridItemName {
         padding-top: 1.5rem;
         margin-top: auto;
       }
-      .gridItemText, .gridItemName {
+      .gridItemText,
+      .gridItemName {
         font-size: 1.25rem;
       }
     }
     @include desktop() {
       grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+  &.translateSliderControls {
+    // translate the slider controls a bit
+    // important here is that the wrapper tag for the slider controls is "aside"
+
+    aside {
+      align-items: center;
+      div {
+        button {
+          &:first-of-type {
+            margin-right: 1.5rem;
+          }
+        }
+      }
+      @include desktop() {
+        align-items: center;
+        margin-top: unset;
+        div {
+          transform: translate(70%, -50%);
+          button {
+            &:first-of-type {
+              margin-right: 1.5rem;
+            }
+          }
+        }
+      }
+    }
+    .staticImageLayoutContent {
+      aside {
+        margin: 0 auto;
+        width: max-content;
+        align-items: center;
+        div {
+          button {
+            width: 0.75rem !important;
+            height: 0.75rem !important;
+            margin: 0 0.25rem !important;
+            border: unset !important;
+            padding: 1rem !important;
+            background-color: $color-darkmedium !important;
+            border-radius: 50% !important;
+            &::after {
+              content: "" !important;
+              position: absolute !important;
+              display: block !important;
+              padding: 0.35rem !important;
+              border-top: 0.2rem solid #fff !important;
+              border-right: 0.2rem solid #fff !important;
+              transform: translateX(-0.15rem) rotate(45deg) !important;
+            }
+            &:first-of-type {
+              display: none;
+            }
+          }
+        }
+        @include desktop() {
+          position: relative;
+          transform: unset;
+          margin: unset;
+        }
+      }
     }
   }
 }
